# UAlg-Open-Day-2025

./: 01_Segment_with_K_means.ipynb  02_SAM.ipynb  README.md  SAM_utils.py  Segment_with_K_means.ipynb  pyproject.toml  requirements.txt
open_day_ualg/: SAM_functions.py  open_day.ipynb
